--- a/config_Tproxy_ralip.json
+++ b/config_Tproxy_ralip.json
@@ -32,9 +32,9 @@
    [
      {"outbound": "any", "server": "dns_direct", "disable_cache": true},
      {"clash_mode": "Direct", "server": "dns_direct"},
-     {"clash_mode":  "Global", "server": "DoH"},
+     {"clash_mode":  "Global", "server": "dns_proxy"},
      {"rule_set": "geosite-cn","server": "dns_direct"},
-     {"rule_set": "geosite-geolocation-!cn", "server": "DoH"}
+     {"rule_set": "geosite-geolocation-!cn", "server": "dns_proxy"}
    ], 
    "final": "dns_proxy",
    "strategy": "ipv4_only"
