--- a/config_Tproxy_ralip.json
+++ b/config_Tproxy_ralip.json
@@ -34,8 +34,8 @@
      {"clash_mode": "Direct", "server": "dns_direct"},
      {"clash_mode":  "Global", "server": "dns_proxy"},
      {"rule_set": "geosite-cn","server": "dns_direct"},
-     {"rule_set": "geosite-geolocation-!cn", "server": "dns_proxy"},
-     {"query_type": "HTTPS", "server": "DoH"}
+     {"query_type": "HTTPS", "server": "DoH"},
+     {"rule_set": "geosite-geolocation-!cn", "server": "dns_proxy"}
    ], 
    "final": "dns_proxy",
    "strategy": "ipv4_only"
