--- a/config_Tproxy_ralip.json
+++ b/config_Tproxy_ralip.json
@@ -28,17 +28,19 @@
      {"tag": "chat", "address": "1.1.1.1", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🤖 OpenAI"},
      {"tag": "discord", "address": "1.1.1.1", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🐬 discord"},
      {"tag": "DoH", "address": "https://cloudflare-dns.com/dns-query", "address_resolver": "dns_proxy", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🚀 节点选择"},
-     {"tag": "dns_direct", "address": "192.168.1.28:5225", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"}
+     {"tag": "dns_direct", "address": "211.137.64.163", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"}
    ],
    "rules": 
    [
      {"outbound": "any", "server": "dns_direct", "disable_cache": true},
      {"clash_mode": "Direct", "server": "dns_direct"},
      {"clash_mode":  "Global", "server": "dns_proxy"},
+     {"port": "5225","server": "dns_direct"},
      {"rule_set": "geosite-chat","server": "chat"},
      {"rule_set": "geosite-discord","server": "discord"},
-     {"rule_set": "geosite-cn","server": "dns_direct"},
      {"query_type": "HTTPS", "server": "DoH"},
+     {"port": "5445","server": "dns_proxy"},
+     {"rule_set": "geosite-cn","server": "dns_direct"},
      {"rule_set": "geosite-geolocation-!cn", "server": "dns_proxy"}
    ], 
    "final": "dns_proxy",
