--- a/config_Tunp_ralip.json
+++ b/config_Tunp_ralip.json
@@ -38,8 +38,8 @@
      {"rule_set": "geosite-chat","server": "chat"},
      {"rule_set": "geosite-discord","server": "discord"},
      {"rule_set": "geosite-cn","server": "dns_direct"},
-     {"query_type": "HTTPS", "server": "DoH"},
-     {"rule_set": "geosite-geolocation-!cn", "server": "dns_proxy"}
+     {"rule_set": "geosite-geolocation-!cn", "server": "dns_proxy"},
+     {"query_type": "HTTPS", "server": "DoH"}
    ], 
    "final": "dns_proxy",
    "strategy": "ipv4_only"
