--- a/config_tun_zj_realip.json
+++ b/config_tun_zj_realip.json
@@ -37,10 +37,10 @@
    "rules": 
    [
      {"outbound": "any", "server": "dns_direct", "disable_cache": true},
-     {"source_ip_cidr": "192.168.3.0/24", "server": "DoH_tk01"},
-     {"source_ip_cidr": "192.168.4.0/24", "server": "DoH_tk02"},
-     {"source_ip_cidr": "192.168.5.0/24", "server": "DoH_tk03"},
-     {"source_ip_cidr": "192.168.7.0/24", "server": "DoH_tk04"},
+     {"source_ip_cidr": "192.168.8.0/24", "server": "DoH_tk01"},
+     {"source_ip_cidr": "192.168.9.0/24", "server": "DoH_tk02"},
+     {"source_ip_cidr": "192.168.10.0/24", "server": "DoH_tk03"},
+     {"source_ip_cidr": "192.168.11.0/24", "server": "dns_direct"},
      {"rule_set": "DNS-alltype", "action": "reject"}
    ], 
    "final": "DoH_tk04",
@@ -90,10 +90,10 @@
      {"protocol": "dns", "action": "hijack-dns"},
      {"clash_mode": "direct", "outbound": "🎯 全球直连"},
      {"clash_mode": "global", "outbound": "GLOBAL"},
-     {"source_ip_cidr": "192.168.3.0/24", "outbound": "tk01"},
-     {"source_ip_cidr": "192.168.4.0/24", "outbound": "tk02"},
-     {"source_ip_cidr": "192.168.5.0/24", "outbound": "tk03"},
-     {"source_ip_cidr": "192.168.7.0/24", "outbound": "tk04"},
+     {"source_ip_cidr": "192.168.8.0/24", "outbound": "tk01"},
+     {"source_ip_cidr": "192.168.9.0/24", "outbound": "tk02"},
+     {"source_ip_cidr": "192.168.10.0/24", "outbound": "tk03"},
+     {"source_ip_cidr": "192.168.11.0/24", "outbound": "tk04"},
      {"domain": ["clash.razord.top", "yacd.metacubex.one", "yacd.haishan.me", "d.metacubex.one"], "outbound": "🎯 全球直连"},
      {"rule_set": "geosite-private", "outbound": "🎯 全球直连"}
    ],
