--- a/config_tun_zj_realip.json
+++ b/config_tun_zj_realip.json
@@ -93,7 +93,7 @@
      {"source_ip_cidr": "192.168.8.0/24", "outbound": "tk01"},
      {"source_ip_cidr": "192.168.9.0/24", "outbound": "tk02"},
      {"source_ip_cidr": "192.168.10.0/24", "outbound": "tk03"},
-     {"source_ip_cidr": "192.168.11.0/24", "outbound": "tk04"},
+     {"source_ip_cidr": "192.168.11.0/24", "outbound": "🎯 全球直连"},
      {"domain": ["clash.razord.top", "yacd.metacubex.one", "yacd.haishan.me", "d.metacubex.one"], "outbound": "🎯 全球直连"},
      {"rule_set": "geosite-private", "outbound": "🎯 全球直连"}
    ],
