--- a/config_Tunp_ralip.json
+++ b/config_Tunp_ralip.json
@@ -28,7 +28,7 @@
      {"tag": "chat", "address": "1.1.1.1", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🤖 OpenAI"},
      {"tag": "discord", "address": "1.1.1.1", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🐬 discord"},
      {"tag": "DoH", "address": "https://cloudflare-dns.com/dns-query", "address_resolver": "dns_proxy", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🚀 节点选择"},
-     {"tag": "dns_direct", "address": "192.168.6.2#5225", "address_strategy": "ipv4_only", "strategy": "prefer_ipv4", "detour": "🎯 全球直连"}
+     {"tag": "dns_direct", "address": "192.168.6.2:5225", "address_strategy": "ipv4_only", "strategy": "prefer_ipv4", "detour": "🎯 全球直连"}
    ],
    "rules": 
    [
