--- a/config_tun_zj_realip.json
+++ b/config_tun_zj_realip.json
@@ -32,6 +32,7 @@
      {"tag": "UDP_tk02", "address": "1.1.1.1", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "tk02"},
      {"tag": "UDP_tk03", "address": "1.1.1.1", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "tk03"},
      {"tag": "UDP_tk04", "address": "1.1.1.1", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "tk04"},
+     {"tag": "dns_proxy", "address": "1.1.1.1", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🐠 漏网之鱼"}
      {"tag": "dns_direct", "address": "211.137.58.20", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"}
    ],
    "rules": 
@@ -43,7 +44,7 @@
      {"source_ip_cidr": "192.168.11.0/24", "server": "dns_direct"},
      {"rule_set": "DNS-alltype", "action": "reject"}
    ], 
-   "final": "DoH_tk04",
+   "final": "dns_proxy",
    "strategy": "ipv4_only"
 },
 
