--- a/config_tun_zj_realip.json
+++ b/config_tun_zj_realip.json
@@ -52,7 +52,8 @@
   {
     "tag": "tun-in",
     "type": "tun",
-    "address": "172.19.0.1/30",
+    "interface_name": "tun0",
+    "address": "198.18.0.1/16",
     "mtu": 1412,
     "auto_route": true,
     "auto_redirect": true,
