--- a/config_tun_zj_realip.json
+++ b/config_tun_zj_realip.json
@@ -53,10 +53,7 @@
     "tag": "tun-in",
     "type": "tun",
     "interface_name": "tun0",
-    "address": [
-    "172.18.0.1/30",
-    "fdfe:dcba:9876::1/126"
-    ],
+    "address": "172.18.0.1/30",
     "mtu": 1412,
     "auto_route": true,
     "auto_redirect": true,
