--- a/config_Tunp_ralip.json
+++ b/config_Tunp_ralip.json
@@ -78,7 +78,7 @@
     { "tag": "🍀 Google", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
     { "tag": "👨‍💻 Github", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
     { "tag": "🐬 discord", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
-    { "tag": "📷 instagram", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
+    { "tag": "📷 Multiple", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
     { "tag": "🪟 Microsoft", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🎯 全球直连"] },
     { "tag": "🎵 TikTok", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
     { "tag": "🎥 Netflix", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
@@ -119,7 +119,9 @@
      {"rule_set": ["geosite-netflix", "geoip-netflix"], "outbound": "🎥 Netflix"},
      {"rule_set": ["geosite-apple", "geoip-apple"], "outbound": "🍏 Apple"},
      {"rule_set": "geosite-discord", "outbound": "🐬 discord"},
-     {"rule_set": "geosite-instagram", "outbound": "📷 instagram"},
+     {"rule_set": "geosite-instagram", "outbound": "📷 Multiple"},
+     {"rule_set": "geosite-x", "outbound": "📷 Multiple"},
+     {"rule_set": "geosite-facebook", "outbound": "📷 Multiple"},
      {"rule_set": "geosite-microsoft", "outbound": "🪟 Microsoft"},
      {"rule_set": "geosite-geolocation-!cn", "outbound": "🚀 节点选择"},
      {"rule_set": ["geoip-cn", "geosite-cn"], "outbound": "🎯 全球直连"}
@@ -137,6 +139,8 @@
     { "tag": "geosite-microsoft", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/microsoft.srs", "download_detour": "🎯 全球直连" },
     { "tag": "geosite-discord", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/sing/geo/geosite/discord.srs", "download_detour": "🎯 全球直连" },
     { "tag": "geosite-instagram", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/sing/geo/geosite/instagram.srs", "download_detour": "🎯 全球直连" },
+    { "tag": "geosite-x", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/sing/geo/geosite/x.srs", "download_detour": "🎯 全球直连" },
+    { "tag": "geosite-facebook", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/sing/geo/geosite/facebook.srs", "download_detour": "🎯 全球直连" },
     { "tag": "geosite-geolocation-!cn", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/geolocation-!cn.srs", "download_detour": "🎯 全球直连" },
     { "tag": "geosite-cn", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/cn.srs", "download_detour": "🎯 全球直连" },
     { "tag": "geosite-private", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/private.srs", "download_detour": "🎯 全球直连" },       
