--- a/config_Tunp_ralip.json
+++ b/config_Tunp_ralip.json
@@ -110,7 +110,7 @@
    "rules": 
    [
      {"action": "sniff"},
-     {"port": "1053", "action": "hijack-dns"},
+     {"port": 1053, "action": "hijack-dns"},
      {"clash_mode": "direct", "outbound": "🎯 全球直连"},
      {"clash_mode": "global", "outbound": "GLOBAL"},
      {"ip_cidr": [ "192.168.1.0/24", "127.0.0.1"], "outbound": "🎯 全球直连"},
