--- a/config_Tunp_ralip.json
+++ b/config_Tunp_ralip.json
@@ -68,12 +68,6 @@
     "listen": "127.0.0.1",
     "listen_port": 2080,
     "users": []
-  },
-  {
-  "type": "direct",
-  "tag": "dns-in",
-  "listen": "127.0.0.1",
-  "listen_port": 1053
   }
 ],
 
@@ -110,8 +104,7 @@
    "rules": 
    [
      {"action": "sniff"},
-     {"source_port": 1053, "action": "hijack-dns"},
-     {"protocol": "dns", "action": "route-options", "override_address": "127.0.0.1", "override_port": 5225},
+     {"protocol": "dns", "action": "hijack-dns"},
      {"clash_mode": "direct", "outbound": "🎯 全球直连"},
      {"clash_mode": "global", "outbound": "GLOBAL"},
      {"ip_cidr": [ "192.168.1.0/24", "127.0.0.1"], "outbound": "🎯 全球直连"},
