--- a/singbox/配置文件/日常/config_Tunp_ralip.json
+++ b/singbox/配置文件/日常/config_Tunp_ralip.json
@@ -72,25 +72,27 @@
 ],
 
   "outbounds": [
-    { "tag": "🚀 节点选择", "type": "selector", "outbounds": ["🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换", "♻️ 自动选择", "🎯 全球直连"] },
-    { "tag": "📹 YouTube", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
-    { "tag": "🤖 OpenAI", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
-    { "tag": "🍀 Google", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
-    { "tag": "👨‍💻 Github", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
-    { "tag": "🐬 discord", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
-    { "tag": "📷 Multiple", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
-    { "tag": "🪟 Microsoft", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🎯 全球直连"] },
-    { "tag": "🎵 TikTok", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
-    { "tag": "🎥 Netflix", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
-    { "tag": "📲 Telegram", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
-    { "tag": "🍏 Apple", "type": "selector", "outbounds": ["🎯 全球直连", "🇭🇰 香港节点", "🇯🇵 日本节点", "🇺🇲 美国节点"] },
+    { "tag": "🚀 节点选择", "type": "selector", "outbounds": ["🔯 香港自动", "🇭🇰 香港节点", "🇸🇬 新加坡节点", "🦁 新加坡自动", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换", "♻️ 自动选择", "🎯 全球直连"] },
+    { "tag": "📹 YouTube", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🦁 新加坡自动", "🇸🇬 新加坡节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
+    { "tag": "🤖 OpenAI", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🦁 新加坡自动", "🇸🇬 新加坡节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
+    { "tag": "🍀 Google", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🦁 新加坡自动", "🇸🇬 新加坡节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
+    { "tag": "👨‍💻 Github", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🦁 新加坡自动", "🇸🇬 新加坡节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
+    { "tag": "🐬 discord", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🦁 新加坡自动", "🇸🇬 新加坡节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
+    { "tag": "📷 Multiple", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🦁 新加坡自动", "🇸🇬 新加坡节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
+    { "tag": "🪟 Microsoft", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🦁 新加坡自动", "🇸🇬 新加坡节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🎯 全球直连"] },
+    { "tag": "🎵 TikTok", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🦁 新加坡自动", "🇸🇬 新加坡节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
+    { "tag": "🎥 Netflix", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🦁 新加坡自动", "🇸🇬 新加坡节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
+    { "tag": "📲 Telegram", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🦁 新加坡自动", "🇸🇬 新加坡节点", "☀ 日本自动", "🇯🇵 日本节点", "🇺🇲 美国节点", "🤖 住宅家宽", "🐸 手动切换"] },
+    { "tag": "🍏 Apple", "type": "selector", "outbounds": ["🎯 全球直连", "🇭🇰 香港节点", "🇸🇬 新加坡节点", "🇯🇵 日本节点", "🇺🇲 美国节点"] },
     { "tag": "🐠 漏网之鱼", "type": "selector", "outbounds": ["🚀 节点选择","🎯 全球直连"] },
     { "tag": "🐸 手动切换", "type": "selector", "outbounds": ["{all}"]},
     { "tag": "🤖 住宅家宽", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["38|89|tk"] }] },
     { "tag": "🇭🇰 香港节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇭🇰|HK|hk|香港|港|HongKong"] }] },
+    { "tag": "🇸🇬 新加坡节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["新加坡|坡|狮城|SG|Singapore"] }] },
     { "tag": "🇯🇵 日本节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇯🇵|JP|jp|日本|日|Japan"] }, { "action": "exclude", "keywords": ["尼日|38|89|月"] }] },
     { "tag": "🇺🇲 美国节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇺🇸|US|us|美国|美|United States"] }, { "action": "exclude", "keywords": ["香港|港|HK|hk|HongKong|Australia|Russian|Austria|38|89"] }] },
     { "tag": "🔯 香港自动", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇭🇰|HK|hk|香港|港|HongKong"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
+    { "tag": "🦁 新加坡自动", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["新加坡|坡|狮城|SG|Singapore"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
     { "tag": "☀ 日本自动", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇯🇵|JP|jp|日本|日|Japan"] }, { "action": "exclude", "keywords": ["尼日|38|89|月"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
     { "tag": "♻️ 自动选择", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "exclude", "keywords": ["网站|地址|剩余|过期|时间|有效|38|89|tk"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
     { "tag": "GLOBAL", "type": "selector", "outbounds": ["{all}"]},
