--- a/singbox/配置文件/日常/config_Tun_ralip.json
+++ b/singbox/配置文件/日常/config_Tun_ralip.json
@@ -147,7 +147,7 @@
     { "tag": "geosite-geolocation-!cn", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/geolocation-!cn.srs", "download_detour": "🎯 全球直连" },
     { "tag": "geosite-cn", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/cn.srs", "download_detour": "🎯 全球直连" },
     { "tag": "geosite-private", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/private.srs", "download_detour": "🎯 全球直连" },
-    { "tag": "geosite-capcut", "type": "remote", "format": "source", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/meiao123/public/refs/heads/main/singbox/%E8%A7%84%E5%88%99%E9%9B%86/capcut.json", "download_detour": "🎯 全球直连" },
+    { "tag": "geosite-capcut", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://github.com/meiao123/public/raw/refs/heads/main/singbox/%E8%A7%84%E5%88%99%E9%9B%86/capcut.srs", "download_detour": "🎯 全球直连" },
      
     { "tag": "geoip-google", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geoip/google.srs", "download_detour": "🎯 全球直连" },
     { "tag": "geoip-telegram", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geoip/telegram.srs", "download_detour": "🎯 全球直连" },     
