--- a/singbox/configuration/config_tun_zj_realip.json
+++ b/singbox/configuration/config_tun_zj_realip.json
@@ -82,7 +82,7 @@
 ],
 
   "outbounds": [
-    { "tag": "🤖 住宅家宽", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["38|89|tk"] }] },
+    { "tag": "🤖 住宅家宽", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["NTT|89|tk"] }] },
     { "tag": "🐠 漏网之鱼", "type": "selector", "outbounds": ["🤖 住宅家宽","🎯 全球直连"] },
     { "tag": "GLOBAL", "type": "selector", "outbounds": ["{all}"]},
     { "tag": "🎯 全球直连", "type": "direct" }
