--- a/singbox/configuration/config_tun_zj_realip.json
+++ b/singbox/configuration/config_tun_zj_realip.json
@@ -8,7 +8,7 @@
   "experimental": {
     "clash_api": {
       "external_controller": "0.0.0.0:9095",
-      "external_ui": "/etc/sing-box/ui",
+      "external_ui": "/etc/momo/run/ui",
       "secret": "",
       "external_ui_download_url": "https://ghfast.top/https://github.com/Zephyruso/zashboard/archive/refs/heads/gh-pages.zip",
       "external_ui_download_detour": "🎯 全球直连",
@@ -16,7 +16,7 @@
     },
   "cache_file": {
     "enabled": true,
-    "path": "/etc/sing-box/cache.db",
+    "path": "/etc/momo/run/cache.db",
     "store_fakeip": false
     }
   },
