--- a/singbox/configuration/1.2.x/config_momo_Tun_ralip.json
+++ b/singbox/configuration/1.2.x/config_momo_Tun_ralip.json
@@ -24,11 +24,11 @@
  "dns":  {
    "servers": 
    [
-     {"tag": "dns_proxy", "type": "udp", "server": "1.1.1.1","strategy": "ipv4_only", "detour": "🚀 节点选择"},
-     {"tag": "chat", "type": "udp", "server": "1.1.1.1", "strategy": "ipv4_only", "detour": "🤖 OpenAI"},
-     {"tag": "discord", "type": "udp", "server": "1.1.1.1", "strategy": "ipv4_only", "detour": "🐬 discord"},
-     {"tag": "DoH", "type": "https", "server": "cloudflare-dns.com", "domain_resolver": "dns_proxy","strategy": "ipv4_only", "detour": "🚀 节点选择"},
-     {"tag": "dns_direct", "type": "udp", "server": "211.137.58.20", "strategy": "ipv4_only", "detour": "🎯 全球直连"}
+     {"tag": "dns_proxy", "type": "udp", "server": "1.1.1.1", "detour": "🚀 节点选择"},
+     {"tag": "chat", "type": "udp", "server": "1.1.1.1", "detour": "🤖 OpenAI"},
+     {"tag": "discord", "type": "udp", "server": "1.1.1.1", "detour": "🐬 discord"},
+     {"tag": "DoH", "type": "https", "server": "cloudflare-dns.com", "domain_resolver": "dns_proxy", "detour": "🚀 节点选择"},
+     {"tag": "dns_direct", "type": "udp", "server": "211.137.58.20", "detour": "🎯 全球直连"}
    ],
    "rules": 
    [
