outbound domain change

--- a/singbox/configuration/1.2.x/config_momo_Tun_ralip.json
+++ b/singbox/configuration/1.2.x/config_momo_Tun_ralip.json
@@ -105,6 +105,7 @@
   "route": 
  {
    "auto_detect_interface": true,
+   "default_domain_resolver": {"server": "dns_direct"},
    "final": "🐠 漏网之鱼",
    "rules": 
    [
