--- a/singbox/configuration/1.2.x/config_momo_Tun_ralip.json
+++ b/singbox/configuration/1.2.x/config_momo_Tun_ralip.json
@@ -34,6 +34,7 @@
    [
      {"clash_mode": "direct", "server": "dns_direct"},
      {"clash_mode":  "global", "server": "dns_proxy"},
+     {"protocol": "ssh","server": "dns_direct"},
      {"rule_set": "geosite-chat","server": "chat"},
      {"rule_set": "geosite-discord","server": "discord"},
      {"rule_set": "geosite-cn","server": "dns_direct"},
@@ -112,6 +113,7 @@
      {"action": "sniff"},
      {"type": "logical", "mode": "or", "rules": [{"port": 53}, {"protocol": "dns"}], "action": "hijack-dns"},
      {"ip_is_private": true, "outbound": "🎯 全球直连"},
+     {"protocol": "ssh", "outbound": "🎯 全球直连"},
      {"clash_mode": "direct", "outbound": "🎯 全球直连"},
      {"clash_mode": "global", "outbound": "GLOBAL"},
      {"ip_cidr": [ "192.168.1.0/24", "127.0.0.1","192.168.10.0/24"], "outbound": "🎯 全球直连"},
