--- a/singbox/configuration/1.2.x/config_momo_tun_zj_realip.json
+++ b/singbox/configuration/1.2.x/config_momo_tun_zj_realip.json
@@ -10,16 +10,12 @@
    [
      {"tag": "DoH_tk01", "type": "https", "server": "cloudflare-dns.com", "domain_resolver": "UDP_tk01", "detour": "tk01"},
      {"tag": "DoH_tk02", "type": "https", "server": "cloudflare-dns.com", "domain_resolver": "UDP_tk02", "detour": "tk02"},
-     {"tag": "DoH_NTT1", "type": "https", "server": "cloudflare-dns.com", "domain_resolver": "UDP_NTT1", "detour": "NTT1"},
-     {"tag": "DoH_NTT2", "type": "https", "server": "cloudflare-dns.com", "domain_resolver": "UDP_NTT2", "detour": "NTT2"},
-     {"tag": "DoH_NTT3", "type": "https", "server": "cloudflare-dns.com", "domain_resolver": "UDP_NTT3", "detour": "NTT3"},
-     {"tag": "DoH_NTT4", "type": "https", "server": "cloudflare-dns.com", "domain_resolver": "UDP_NTT4", "detour": "NTT4"},
+     {"tag": "DoH_au1", "type": "https", "server": "cloudflare-dns.com", "domain_resolver": "UDP_au1", "detour": "au1"},
+     {"tag": "DoH_au2", "type": "https", "server": "cloudflare-dns.com", "domain_resolver": "UDP_au2", "detour": "au2"},
      {"tag": "UDP_tk01", "type": "udp", "server": "1.1.1.1", "detour": "tk01"},
      {"tag": "UDP_tk02", "type": "udp", "server": "1.1.1.1", "detour": "tk02"},
-     {"tag": "UDP_NTT1", "type": "udp", "server": "1.1.1.1", "detour": "NTT1"},
-     {"tag": "UDP_NTT2", "type": "udp", "server": "1.1.1.1", "detour": "NTT2"},
-     {"tag": "UDP_NTT3", "type": "udp", "server": "1.1.1.1", "detour": "NTT3"},
-     {"tag": "UDP_NTT4", "type": "udp", "server": "1.1.1.1", "detour": "NTT4"},
+     {"tag": "UDP_au1", "type": "udp", "server": "1.1.1.1", "detour": "au1"},
+     {"tag": "UDP_au2", "type": "udp", "server": "1.1.1.1", "detour": "au2"},
      {"tag": "dns_proxy", "type": "udp", "server": "1.1.1.1", "detour": "🐠 漏网之鱼"},
      {"tag": "dns_direct", "type": "udp", "server": "211.137.58.20"}
    ],
@@ -27,10 +23,10 @@
    [
      {"source_ip_cidr": "192.168.8.0/24", "server": "DoH_tk01"},
      {"source_ip_cidr": "192.168.9.0/24", "server": "DoH_tk02"},
-     {"source_ip_cidr": "192.168.10.0/24", "server": "DoH_NTT1"},
-     {"source_ip_cidr": "192.168.11.0/24", "server": "DoH_NTT2"},
-     {"source_ip_cidr": "192.168.12.0/24", "server": "DoH_NTT3"},
-     {"source_ip_cidr": "192.168.13.0/24", "server": "DoH_NTT4"},
+     {"source_ip_cidr": "192.168.10.0/24", "server": "DoH_au1"},
+     {"source_ip_cidr": "192.168.11.0/24", "server": "DoH_au1"},
+     {"source_ip_cidr": "192.168.12.0/24", "server": "DoH_au2"},
+     {"source_ip_cidr": "192.168.13.0/24", "server": "DoH_au2"},
      {"rule_set": "DNS-alltype", "action": "reject"}
    ],
    "final": "dns_proxy",
@@ -52,10 +48,10 @@
      {"clash_mode": "global", "outbound": "GLOBAL"},
      {"source_ip_cidr": "192.168.8.0/24", "outbound": "tk01"},
      {"source_ip_cidr": "192.168.9.0/24", "outbound": "tk02"},
-     {"source_ip_cidr": "192.168.10.0/24", "outbound": "NTT1"},
-     {"source_ip_cidr": "192.168.11.0/24", "outbound": "NTT2"},
-     {"source_ip_cidr": "192.168.12.0/24", "outbound": "NTT3"},
-     {"source_ip_cidr": "192.168.13.0/24", "outbound": "NTT4"},
+     {"source_ip_cidr": "192.168.10.0/24", "outbound": "au1"},
+     {"source_ip_cidr": "192.168.11.0/24", "outbound": "au1"},
+     {"source_ip_cidr": "192.168.12.0/24", "outbound": "au2"},
+     {"source_ip_cidr": "192.168.13.0/24", "outbound": "au2"},
      {"domain": ["clash.razord.top", "yacd.metacubex.one", "yacd.haishan.me", "d.metacubex.one"], "outbound": "🎯 全球直连"}
    ],
     
