--- a/singbox/configuration/1.2.x/config_momo_tun_zj_realip.json
+++ b/singbox/configuration/1.2.x/config_momo_tun_zj_realip.json
@@ -21,12 +21,12 @@
    ],
    "rules": 
    [
-     {"source_ip_cidr": "192.168.8.0/24", "server": "DoH_tk01"},
-     {"source_ip_cidr": "192.168.9.0/24", "server": "DoH_tk02"},
-     {"source_ip_cidr": "192.168.10.0/24", "server": "DoH_au1"},
-     {"source_ip_cidr": "192.168.11.0/24", "server": "DoH_au1"},
-     {"source_ip_cidr": "192.168.12.0/24", "server": "DoH_au2"},
-     {"source_ip_cidr": "192.168.13.0/24", "server": "DoH_au2"},
+     {"source_ip_cidr": "192.168.8.202", "server": "DoH_tk01"},
+     {"source_ip_cidr": "192.168.8.186", "server": "DoH_tk02"},
+     {"source_ip_cidr": "192.168.8.229", "server": "DoH_au1"},
+     {"source_ip_cidr": "192.168.8.146", "server": "DoH_au1"},
+     {"source_ip_cidr": "192.168.8.194", "server": "DoH_au2"},
+     {"source_ip_cidr": "192.168.8.236", "server": "DoH_au2"},
      {"rule_set": "DNS-alltype", "action": "reject"}
    ],
    "final": "dns_proxy",
@@ -46,12 +46,12 @@
      {"ip_is_private": true, "outbound": "direct"},
      {"clash_mode": "direct", "outbound": "🎯 全球直连"},
      {"clash_mode": "global", "outbound": "GLOBAL"},
-     {"source_ip_cidr": "192.168.8.0/24", "outbound": "tk01"},
-     {"source_ip_cidr": "192.168.9.0/24", "outbound": "tk02"},
-     {"source_ip_cidr": "192.168.10.0/24", "outbound": "au1"},
-     {"source_ip_cidr": "192.168.11.0/24", "outbound": "au1"},
-     {"source_ip_cidr": "192.168.12.0/24", "outbound": "au2"},
-     {"source_ip_cidr": "192.168.13.0/24", "outbound": "au2"},
+     {"source_ip_cidr": "192.168.8.202", "outbound": "tk01"},
+     {"source_ip_cidr": "192.168.8.186", "outbound": "tk02"},
+     {"source_ip_cidr": "192.168.8.229", "outbound": "au1"},
+     {"source_ip_cidr": "192.168.8.146", "outbound": "au1"},
+     {"source_ip_cidr": "192.168.8.194", "outbound": "au2"},
+     {"source_ip_cidr": "192.168.8.236", "outbound": "au2"},
      {"domain": ["clash.razord.top", "yacd.metacubex.one", "yacd.haishan.me", "d.metacubex.one"], "outbound": "🎯 全球直连"}
    ],
     
