--- a/singbox/configuration/1.2.x/config_momo_tun_zj_realip.json
+++ b/singbox/configuration/1.2.x/config_momo_tun_zj_realip.json
@@ -51,7 +51,7 @@
      {"source_ip_cidr": "192.168.10.0/24", "outbound": "au1"},
      {"source_ip_cidr": "192.168.11.0/24", "outbound": "au1"},
      {"source_ip_cidr": "192.168.12.0/24", "outbound": "au2"},
-     {"source_ip_cidr": "192.168.13.236", "outbound": "au2"},
+     {"source_ip_cidr": "192.168.13.0/24", "outbound": "au2"},
      {"domain": ["clash.razord.top", "yacd.metacubex.one", "yacd.haishan.me", "d.metacubex.one"], "outbound": "🎯 全球直连"}
    ],
     
