--- a/clash/config.yaml
+++ b/clash/config.yaml
@@ -4,7 +4,7 @@
 # 机场订阅
 proxy-providers:
   Airport1:
-    url: "http://192.168.1.28:3001/CKg2abstVnOeRpm1aB4G/download/collection/proxy?target=ClashMeta"
+    url: "http://192.168.1.28:3001/CKg2abstVnOeRpm1aB4G/download/collection/proxy"
     type: http
     interval: 86400
     health-check:
