--- a/singbox/configuration/1.2.x/config_momo_Tun_ralip.json
+++ b/singbox/configuration/1.2.x/config_momo_Tun_ralip.json
@@ -16,7 +16,7 @@
     },
   "cache_file": {
     "enabled": true,
-    "path": "/etc/momo/run/cache.db",
+    "path": "/etc/sing-box/cache.db",
     "store_fakeip": false
     }
   },
