--- a/singbox/configuration/1.2.x/config_sb_Tun_fakeip.json
+++ b/singbox/configuration/1.2.x/config_sb_Tun_fakeip.json
@@ -24,7 +24,7 @@
  "dns":  {
    "servers": 
    [
-     {"tag": "dns_proxy", "type": "https", "server": "8.8.8.8", "detour": "🚀 节点选择"},
+     {"tag": "dns_proxy", "type": "udp", "server": "8.8.8.8", "detour": "🚀 节点选择"},
      {"tag": "dns_direct", "type": "udp", "server": "223.5.5.5"},
      {"tag": "fakeip", "type": "fakeip", "inet4_range": "198.18.0.0/15", "inet6_range": "fc00::/18"}
    ],
