--- a/singbox/configuration/1.2.x/config_sb_Tun_ralip.json
+++ b/singbox/configuration/1.2.x/config_sb_Tun_ralip.json
@@ -25,8 +25,17 @@
    "servers": 
    [
      {"tag": "dns_proxy", "type": "udp", "server": "1.1.1.1", "detour": "🚀 节点选择"},
-     {"tag": "chat", "type": "udp", "server": "1.1.1.1", "detour": "🤖 OpenAI"},
+     {"tag": "youtube", "type": "udp", "server": "1.1.1.1", "detour": "📹 YouTube"},
+     {"tag": "Ai", "type": "udp", "server": "1.1.1.1", "detour": "🤖 OpenAI"},
+     {"tag": "google", "type": "udp", "server": "1.1.1.1", "detour": "🍀 Google"},
+     {"tag": "github", "type": "udp", "server": "1.1.1.1", "detour": "👨‍💻 Github"},
      {"tag": "discord", "type": "udp", "server": "1.1.1.1", "detour": "🐬 discord"},
+     {"tag": "mltiple", "type": "udp", "server": "1.1.1.1", "detour": "📷 Multiple"},
+     {"tag": "microsoft", "type": "udp", "server": "1.1.1.1", "detour": "🪟 Microsoft"},
+     {"tag": "tiktok", "type": "udp", "server": "1.1.1.1", "detour": "🎵 TikTok"},
+     {"tag": "netflix", "type": "udp", "server": "1.1.1.1", "detour": "🎥 Netflix"},
+     {"tag": "telegram", "type": "udp", "server": "1.1.1.1", "detour": "📲 Telegram"},
+     {"tag": "Apple", "type": "udp", "server": "1.1.1.1", "detour": "🍏 Apple"},
      {"tag": "DoH", "type": "https", "server": "cloudflare-dns.com", "domain_resolver": "dns_proxy", "detour": "🚀 节点选择"},
      {"tag": "dns_direct", "type": "udp", "server": "211.137.64.163"}
    ],
@@ -35,15 +44,25 @@
      {"clash_mode": "direct", "server": "dns_direct"},
      {"clash_mode":  "global", "server": "dns_proxy"},
      {"protocol": "ssh","server": "dns_direct"},
-     {"rule_set": "geosite-chat","server": "chat"},
+     {"rule_set": "geosite-youtube","server": "youtube"},
+     {"rule_set": "geosite-Ai","server": "Ai"},
+     {"rule_set": ["geosite-google", "geoip-google"],"server": "google"},
+     {"rule_set": "geosite-github","server": "github"},
      {"rule_set": "geosite-discord","server": "discord"},
+     {"rule_set": ["geosite-instagram","geosite-x","geosite-facebook"],"server": "mltiple"},
+     {"rule_set": "geosite-microsoft","server": "microsoft"},
+     {"rule_set": ["geosite-tiktok", "geosite-capcut"],"server": "tiktok"},
+     {"rule_set": ["geosite-netflix", "geoip-netflix"],"server": "netflix"},
+     {"rule_set": ["geosite-telegram", "geoip-telegram"],"server": "telegram"},
+     {"rule_set": ["geosite-apple", "geoip-apple"],"server": "Apple"},
      {"rule_set": "geosite-cn","server": "dns_direct"},
      {"rule_set": "geosite-geolocation-!cn", "server": "dns_proxy"},
      {"query_type": "HTTPS", "server": "DoH"}
    ], 
    "final": "dns_proxy",
    "strategy": "ipv4_only",
-   "independent_cache": true
+   "independent_cache": true,
+   "reverse_mapping": true
 },
 
 "inbounds": [
@@ -90,7 +109,7 @@
     { "tag": "🍏 Apple", "type": "selector", "outbounds": ["🎯 全球直连", "🇭🇰 香港节点", "🇸🇬 新加坡节点", "🇯🇵 日本节点", "🇺🇲 美国节点"] },
     { "tag": "🐠 漏网之鱼", "type": "selector", "outbounds": ["🚀 节点选择","🎯 全球直连"] },
     { "tag": "🐸 手动切换", "type": "selector", "outbounds": ["{all}"]},
-    { "tag": "🤖 住宅家宽", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["38|au|AU|tk|NTT"] }] },
+    { "tag": "🤖 住宅家宽", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["cn2|ny|tk|NTT"] }] },
     { "tag": "🇭🇰 香港节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇭🇰|HK|hk|香港|港|HongKong"] }] },
     { "tag": "🇸🇬 新加坡节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["新加坡|坡|狮城|SG|Singapore"] }] },
     { "tag": "🇯🇵 日本节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇯🇵|JP|jp|日本|日|Japan"] }, { "action": "exclude", "keywords": ["尼日|38|89|月"] }] },
@@ -124,21 +143,18 @@
      {"rule_set": "geosite-github", "outbound": "👨‍💻 Github"},
      {"rule_set": ["geosite-google", "geoip-google"], "outbound": "🍀 Google"},
      {"rule_set": ["geosite-telegram", "geoip-telegram"], "outbound": "📲 Telegram"},
-     {"rule_set": "geosite-tiktok", "outbound": "🎵 TikTok"},
-     {"rule_set": "geosite-capcut", "outbound": "🎵 TikTok"},
+     {"rule_set": ["geosite-tiktok", "geosite-capcut"], "outbound": "🎵 TikTok"},
      {"rule_set": ["geosite-netflix", "geoip-netflix"], "outbound": "🎥 Netflix"},
      {"rule_set": ["geosite-apple", "geoip-apple"], "outbound": "🍏 Apple"},
      {"rule_set": "geosite-discord", "outbound": "🐬 discord"},
-     {"rule_set": "geosite-instagram", "outbound": "📷 Multiple"},
-     {"rule_set": "geosite-x", "outbound": "📷 Multiple"},
-     {"rule_set": "geosite-facebook", "outbound": "📷 Multiple"},
+     {"rule_set": ["geosite-instagram","geosite-x","geosite-facebook"], "outbound": "📷 Multiple"},
      {"rule_set": "geosite-microsoft", "outbound": "🪟 Microsoft"},
      {"rule_set": "geosite-geolocation-!cn", "outbound": "🚀 节点选择"},
      {"rule_set": ["geoip-cn", "geosite-cn"], "outbound": "🎯 全球直连"}
    ],
     
    "rule_set": [
-    { "tag": "geosite-chat", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/sing/geo/geosite/category-ai-!cn.srs", "download_detour": "🎯 全球直连" },
+    { "tag": "geosite-Ai", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/sing/geo/geosite/category-ai-!cn.srs", "download_detour": "🎯 全球直连" },
     { "tag": "geosite-youtube", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/youtube.srs", "download_detour": "🎯 全球直连" },
     { "tag": "geosite-google", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/google.srs", "download_detour": "🎯 全球直连" },
     { "tag": "geosite-github", "type": "remote", "format": "binary", "url": "https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/github.srs", "download_detour": "🎯 全球直连" },
